[gd_scene load_steps=24 format=3 uid="uid://k11cug4p8o3l"]

[ext_resource type="Script" uid="uid://dixfcu6jmx0kd" path="res://scenes/main.gd" id="1_tbgi4"]
[ext_resource type="AudioStream" uid="uid://dqm0r66m6ggwt" path="res://assets/music/enchanted tiki 86.mp3" id="2_jscy8"]
[ext_resource type="Script" uid="uid://0a8baesyqdot" path="res://scenes/battle_scene.gd" id="3_jbj1t"]
[ext_resource type="PackedScene" uid="uid://gmxev02ltcly" path="res://scenes/battle_groups/battle_group_friendly.tscn" id="4_jbj1t"]
[ext_resource type="Texture2D" uid="uid://jml4obgrdfeg" path="res://assets/backgrounds/flat-forestred-dark.png" id="4_jscy8"]
[ext_resource type="Script" uid="uid://b4bb2s8x838ip" path="res://scenes/battle_scene_area_left.gd" id="4_muem4"]
[ext_resource type="Script" uid="uid://ckq1sgjqlphh3" path="res://scenes/ui/battle_ui.gd" id="5_a8y0u"]
[ext_resource type="Theme" uid="uid://d2wc7fposrlqs" path="res://themes/wizard_theme.tres" id="5_jkv2x"]
[ext_resource type="PackedScene" uid="uid://0jk65n5vl1s7" path="res://scenes/battle_groups/battle_group_enemy.tscn" id="5_muem4"]
[ext_resource type="PackedScene" uid="uid://b0y800rpavgwc" path="res://scenes/ui/deck_view_window.tscn" id="9_eb6dy"]
[ext_resource type="Texture2D" uid="uid://b8e1wo2qc3kiu" path="res://assets/sprites/deck.png" id="9_ya4ey"]
[ext_resource type="Texture2D" uid="uid://56m1ilaseofe" path="res://assets/sprites/deck_pressed.png" id="10_eb6dy"]
[ext_resource type="Texture2D" uid="uid://c2cpjnsgjdd1x" path="res://assets/sprites/card_back_1.PNG" id="11_a8y0u"]
[ext_resource type="Texture2D" uid="uid://coq642n2i6gl" path="res://assets/sprites/deck_hovered.png" id="11_trceg"]
[ext_resource type="PackedScene" uid="uid://3hsvnd70wteq" path="res://scenes/ui/tooltip.tscn" id="12_trceg"]
[ext_resource type="PackedScene" uid="uid://c01lspqb108gi" path="res://scenes/ui/UsableDeckUI.tscn" id="13_trceg"]
[ext_resource type="PackedScene" uid="uid://cy1kfsc2qfglo" path="res://scenes/hand.tscn" id="14_a8y0u"]
[ext_resource type="Theme" uid="uid://1dr1eewpv0jd" path="res://themes/ui_theme.tres" id="16_gqmmt"]
[ext_resource type="PackedScene" uid="uid://b1rro3h5dxilx" path="res://scenes/ui/battle_over_panel.tscn" id="19_0ld40"]
[ext_resource type="PackedScene" uid="uid://ggbqqkmgvjb1" path="res://scenes/ui/mana_panel.tscn" id="19_jscy8"]
[ext_resource type="PackedScene" uid="uid://bxtf6la07t0t5" path="res://scenes/ui/card_pile_opener.tscn" id="19_yc10j"]
[ext_resource type="PackedScene" uid="uid://c634qgskmd0a" path="res://scenes/ui/card_pile_view.tscn" id="22_jscy8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eb6dy"]
size = Vector2(1200, 200)

[node name="Main" type="Node2D"]
script = ExtResource("1_tbgi4")
music = ExtResource("2_jscy8")

[node name="Battle_Scene" type="CanvasLayer" parent="."]
script = ExtResource("3_jbj1t")

[node name="Background" type="TextureRect" parent="Battle_Scene"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -1080.0
offset_right = 1920.0
grow_vertical = 0
texture = ExtResource("4_jscy8")

[node name="BattleGroupFriendly" parent="Battle_Scene" instance=ExtResource("4_jbj1t")]
position = Vector2(637, 748)

[node name="BattleGroupEnemy" parent="Battle_Scene" instance=ExtResource("5_muem4")]
position = Vector2(1369, 748)
faces_right = false

[node name="BattleSceneAreaLeft" type="Area2D" parent="Battle_Scene"]
position = Vector2(969, 698)
collision_layer = 8
script = ExtResource("4_muem4")

[node name="CollisionShapeLeft" type="CollisionShape2D" parent="Battle_Scene/BattleSceneAreaLeft"]
position = Vector2(-600, -50)
shape = SubResource("RectangleShape2D_eb6dy")

[node name="Debug_UI" type="CanvasLayer" parent="."]

[node name="Take1Button" type="Button" parent="Debug_UI"]
visible = false
offset_top = 99.0
offset_right = 126.0
offset_bottom = 130.0
theme = ExtResource("5_jkv2x")
text = "Add max mana"

[node name="Take6Button" type="Button" parent="Debug_UI"]
visible = false
offset_top = 133.0
offset_right = 126.0
offset_bottom = 164.0
text = "Take 6 Damage"

[node name="AddAttackButton" type="Button" parent="Debug_UI"]
visible = false
offset_right = 133.0
offset_bottom = 31.0
theme = ExtResource("5_jkv2x")
text = "Add Attack Card
"

[node name="AddDefendButton" type="Button" parent="Debug_UI"]
visible = false
offset_top = 32.0
offset_right = 140.0
offset_bottom = 63.0
text = "Add Defend Card
"

[node name="AddBasicDeckButton" type="Button" parent="Debug_UI"]
visible = false
offset_top = 66.0
offset_right = 140.0
offset_bottom = 97.0
text = "Add Basic Deck
"

[node name="RemoveCardButton" type="Button" parent="Debug_UI"]
visible = false
offset_top = 168.0
offset_right = 111.0
offset_bottom = 199.0
text = "Remove Card"

[node name="Battle_UI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("5_a8y0u")

[node name="EndTurn" type="Button" parent="Battle_UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -197.0
offset_top = -70.0
offset_right = -18.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "End Turn"

[node name="StartBattleButton" type="Button" parent="Battle_UI"]
visible = false
offset_left = 237.0
offset_top = 2.0
offset_right = 333.0
offset_bottom = 33.0
text = "Start Game"

[node name="UsableDeckUi" parent="Battle_UI" instance=ExtResource("13_trceg")]
visible = false
offset_left = 9.0
offset_top = 499.0
offset_right = 129.0
offset_bottom = 667.0
texture_normal = ExtResource("11_a8y0u")

[node name="DrawButton" type="TextureButton" parent="Battle_UI"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 64.0
grow_vertical = 0
size_flags_horizontal = 0
texture_normal = ExtResource("9_ya4ey")
texture_pressed = ExtResource("10_eb6dy")
texture_hover = ExtResource("11_trceg")

[node name="DiscardButton" type="TextureButton" parent="Battle_UI"]
visible = false
offset_left = 1122.0
offset_top = 540.0
offset_right = 1186.0
offset_bottom = 604.0
texture_normal = ExtResource("9_ya4ey")
texture_pressed = ExtResource("10_eb6dy")
texture_hover = ExtResource("11_trceg")

[node name="CollectionButton" type="TextureButton" parent="Battle_UI"]
visible = false
offset_left = 1018.0
offset_top = -10.0
offset_right = 1082.0
offset_bottom = 54.0
texture_normal = ExtResource("9_ya4ey")
texture_pressed = ExtResource("10_eb6dy")
texture_hover = ExtResource("11_trceg")

[node name="Hand" parent="Battle_UI" instance=ExtResource("14_a8y0u")]

[node name="Tooltip" parent="Battle_UI" instance=ExtResource("12_trceg")]

[node name="DrawPileButton" parent="Battle_UI" node_paths=PackedStringArray("counter") instance=ExtResource("19_yc10j")]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -133.0
offset_right = 69.0
offset_bottom = -69.0
grow_vertical = 0
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="Battle_UI/DrawPileButton"]
layout_mode = 0
offset_left = 12.0
offset_top = 22.0
offset_right = 52.0
offset_bottom = 68.0
theme = ExtResource("16_gqmmt")
theme_override_colors/font_color = Color(0.45098, 0.160784, 0.27451, 1)
theme_override_font_sizes/font_size = 26
text = "99"
horizontal_alignment = 1

[node name="DiscardPileButton" parent="Battle_UI" node_paths=PackedStringArray("counter") instance=ExtResource("19_yc10j")]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -133.0
offset_right = -22.0
offset_bottom = -69.0
grow_horizontal = 0
grow_vertical = 0
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="Battle_UI/DiscardPileButton"]
layout_mode = 0
offset_left = 13.0
offset_top = 22.0
offset_right = 53.0
offset_bottom = 68.0
theme = ExtResource("16_gqmmt")
theme_override_colors/font_color = Color(0.45098, 0.160784, 0.27451, 1)
theme_override_font_sizes/font_size = 26
text = "99"
horizontal_alignment = 1

[node name="ManaPanel" parent="Battle_UI" instance=ExtResource("19_jscy8")]
position = Vector2(190, 953)

[node name="Visual_Overlays" type="CanvasLayer" parent="."]

[node name="DrawViewWindow" parent="Visual_Overlays" instance=ExtResource("9_eb6dy")]
visible = false
position = Vector2(576, 324)

[node name="DiscardViewWindow" parent="Visual_Overlays" instance=ExtResource("9_eb6dy")]
visible = false
position = Vector2(576, 324)

[node name="CollectionViewWindow" parent="Visual_Overlays" instance=ExtResource("9_eb6dy")]
visible = false
position = Vector2(576, 324)

[node name="BattleOverPanel" parent="Visual_Overlays" instance=ExtResource("19_0ld40")]
visible = false

[node name="CardPileViews" type="CanvasLayer" parent="."]
layer = 4

[node name="DrawPileView" parent="CardPileViews" instance=ExtResource("22_jscy8")]
unique_name_in_owner = true
visible = false

[node name="DiscardPileView" parent="CardPileViews" instance=ExtResource("22_jscy8")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="Debug_UI/Take1Button" to="." method="_on_take_1_button_pressed"]
[connection signal="pressed" from="Debug_UI/Take6Button" to="." method="_on_take_6_button_pressed"]
[connection signal="pressed" from="Debug_UI/AddAttackButton" to="." method="_on_add_attack_button_pressed"]
[connection signal="pressed" from="Debug_UI/AddDefendButton" to="." method="_on_add_defend_button_pressed"]
[connection signal="pressed" from="Debug_UI/AddBasicDeckButton" to="." method="_on_add_basic_deck_button_pressed"]
[connection signal="pressed" from="Debug_UI/RemoveCardButton" to="." method="_on_remove_card_button_pressed"]
[connection signal="pressed" from="Battle_UI/EndTurn" to="." method="_on_end_turn_pressed"]
[connection signal="pressed" from="Battle_UI/StartBattleButton" to="." method="_on_start_battle_button_pressed"]
[connection signal="pressed" from="Battle_UI/UsableDeckUi" to="." method="_on_usable_deck_ui_pressed"]
[connection signal="pressed" from="Battle_UI/DrawButton" to="." method="_on_draw_button_pressed"]
[connection signal="pressed" from="Battle_UI/DiscardButton" to="." method="_on_discard_button_pressed"]
[connection signal="pressed" from="Battle_UI/CollectionButton" to="." method="_on_collection_button_pressed"]
[connection signal="card_activated" from="Battle_UI/Hand" to="." method="_on_hand_card_activated"]
